# autonomous-development

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
agents/: feature-implementer.md  review-triage.md  verification-runner.md
examples/: invocations.md  target-repository.gitignore
prompts/: adversarial-review.md  code-review-delta.md  code-review.md
schemas/: review-delta.schema.json  triage.schema.json
scripts/: controller.py  schema_validation.py  state.py  stop_gate.py  validate_project.py
skills/autonomous-current/: SKILL.md
skills/autonomous-feature/: SKILL.md
skills/autonomous-feature/references/: implementation.md  planning.md  review.md  specification.md  verification.md
skills/autonomous-main/: SKILL.md
skills/autonomous-status/: SKILL.md
skills/codex-review/: SKILL.md
skills/enhance-idea/: SKILL.md
skills/fix-findings/: SKILL.md
skills/implement-plan/: SKILL.md
skills/implementation-plan/: SKILL.md
skills/verify-feature/references/: check-discovery.md
tests/: test_controller.py  test_features.py  test_project_layout.py  test_schema_validation.py  test_state.py
